# AndroidNative

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/braincs/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/braincs/android/: GuideActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/braincs/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativebytes/: build.gradle
nativebytes/src/androidTest/java/com/braincs/nativebytes/: ExampleInstrumentedTest.java
nativebytes/src/main/: AndroidManifest.xml
nativebytes/src/main/cpp/: CMakeLists.txt  bytes_jni.cpp
nativebytes/src/main/java/com/braincs/nativebytes/: CameraPreviewActivity.java  NativeAPI.java
nativebytes/src/main/res/layout/: activity_camera_preview.xml
nativebytes/src/main/res/values/: strings.xml
nativebytes/src/test/java/com/braincs/nativebytes/: ExampleUnitTest.java
nativedlopen/: README.md  build.gradle
nativedlopen/src/androidTest/java/com/braincs/nativedlopen/: ExampleInstrumentedTest.java
nativedlopen/src/main/: AndroidManifest.xml
nativedlopen/src/main/cpp/: CMakeLists.txt  api.cpp
nativedlopen/src/main/res/layout/: activity_ndlopen.xml
nativedlopen/src/main/res/values/: strings.xml
nativesamplelib/: README.md  build.gradle
nativesamplelib/src/main/: AndroidManifest.xml
nativesamplelib/src/main/cpp/: CMakeLists.txt  sdk.cpp  sdk.h
nativesamplelib/src/main/res/values/: strings.xml
(+4 files in other folders)
